Agregando Articulo y su estilo.

--- a/Articulo1.html
+++ b/Articulo1.html
@@ -6,6 +6,43 @@
     <title>Cómo utilizar JavaScript</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Acerca de</a>
+            <a href="#">Servicios</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </header>
+
+    <h2 class="Titulo">¿Cómo utilizar JavaScript?</h2>
+
+    <article>
+        <h3 id="color1">Un Poco Sobre JavaScript</h3>
+        <hr>
+        <p>JavaScript es un lenguaje de programación ampliamente utilizado en desarrollo web que permite a los desarrolladores crear contenido dinámico e interactivo en sitios web. Se ejecuta en el navegador del usuario y se utiliza para manipular el contenido de una página web, responder a eventos del usuario y comunicarse con servidores para cargar o enviar datos en segundo plano. </p>
+    </article>
+    <article>
+        <h3 id="color2">Cómo utilizar</h3>
+        <hr>
+        <p>Para utilizar JavaScript, se incluye el código JavaScript en el HTML de una página web, generalmente dentro de etiquetas "scripts". Puede ser utilizado tanto en el lado del cliente como en el servidor (Node.js). Los desarrolladores pueden escribir funciones y eventos para controlar el comportamiento de una página web, seleccionar elementos HTML, manipular el DOM (Document Object Model), gestionar peticiones HTTP y realizar muchas otras tareas. </p>
+    </article>
+
+    <footer>
+        <section class="buttons">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google-plus"></a>
+            <a href="#" class="fa fa-youtube"></a>
+        </section>
+        <hr>
+        <br>
+        <p>
+            <a href="#">Privacidad</a> | 
+            <a href="#">Términos del sitio</a> | 
+            <a href="#">Preferencias de cookies</a> | 
+            © 2023, UDB Web Services, Inc. o sus filiales. Todos los derechos reservados.
+        </p>
+    </footer>
 </body>
 </html>
