--- a/Articulo1.html
+++ b/Articulo1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cómo utilizar JavaScript</title>
+    <link rel="stylesheet" href="css/article1.css">
 </head>
 <body>
     <header>
