--- a/convertidor.html
+++ b/convertidor.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="convertidor.html">
-    <title>Document</title>
+    <title>Calculadora de IMC</title>
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 
 <body>
-
+    <div class="container">
+    <h1>Calculadora de IMC</h1>
+    <form id="bmi-form">
+        <label for="weight">Peso (kg):</label>
+        <div class="left">
+            <input type="number" id="weight" step="0.01" required><br>
+        </div>
+        <label for="height">Altura (m):</label>
+        <div class="right">
+            <input type="number" id="height" step="0.01" required><br>
+        </div>
+    </form>
+    <p>Tu indice de masa corporal es: <span id="result"></span></p>
+    <button type="button" id="calculate">Calcular IMC</button>
+    </div>
+    <div class="img pesos">
+        <img src="img/indice de masa corporal.jpg" alt="">
+    </div>
+    
     <div class="container2">
         <h1>Convertidor de Libras a Kilogramos</h1>
         <p>Introduce el valor en libras:</p>
-        <input type="number" id="librasInput">
+        <input type="number" id="librasInput" oninput="Librasakg()" >
         <p>Resultado de la Conversion a Kilogramos es:</p>
         <p id="resultadokilitogramos">0 kg</p>
     </div>
+
+    <script src="js/calculadora.js"></script>
+    <script src="js/convertidor.js"></script>
 
 </body>
 
