--- a/convertidor.html
+++ b/convertidor.html
@@ -8,23 +8,24 @@
 
 <body>
     <div class="container">
-    <h1>Calculadora de IMC</h1>
-    <form id="bmi-form">
-        <label for="weight">Peso (kg):</label>
-        <div class="left">
-            <input type="number" id="weight" step="0.01" required><br>
+        <h1>Calculadora de IMC</h1>
+        <form id="bmi-form">
+            <label for="peso">Peso (kg):</label>
+            <div class="left">
+            <input type="number" id="peso" required><br>
         </div>
-        <label for="height">Altura (m):</label>
-        <div class="right">
-            <input type="number" id="height" step="0.01" required><br>
+            <label for="altura">Altura (m):</label>
+            <div class="right">
+            <input type="number" id="altura" required><br>
         </div>
-    </form>
-    <p>Tu indice de masa corporal es: <span id="result"></span></p>
-    <button type="button" id="calculate">Calcular IMC</button>
+        </form>
+        <p>Tu indice de masa corporal es: <span id="resultado"></span></p>
+        <button type="button" id="calcular">Calcular IMC</button> 
     </div>
     <div class="img pesos">
-        <img src="img/indice de masa corporal.jpg" alt="">
+    <img src="img/indice de masa corporal.jpg" alt="">
     </div>
+    <script src="js/calculadora.js"></script>
     
     <div class="container2">
         <h1>Convertidor de Libras a Kilogramos</h1>
