Navegacion entre paginas.

--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Acerca de</a>
+            <a href="Index.html">Inicio</a>
+            <a href="Programadores.html">Acerca de</a>
             <a href="#">Servicios</a>
-            <a href="#">Contacto</a>
+            <a href="Contactos.html">Contacto</a>
         </nav>
     </header>
 
