--- a/Programadores.html
+++ b/Programadores.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <nav>
-            <a href=".html"> Inicio </a>
-            <a href=".html"> Acerca de </a>
-            <a href=".html"> Servicios </a>
-            <a href=".html"> Contacto </a>
+            <a href="Index.html"> Inicio </a>
+            <a href="Programadores.html"> Acerca de </a>
+            <a href="#"> Servicios </a>
+            <a href="Contactos.html"> Contacto </a>
         </nav>
     </header>
     <h1 class="titulo1"> Calculadora de IMC en JavaScript. </h1>
