Arreglando navegacion y errores del css

--- a/Contactos.html
+++ b/Contactos.html
@@ -13,20 +13,19 @@
         <nav>
             <a href="Index.html"> Inicio </a>
             <a href="Programadores.html"> Acerca de </a>
-            <a href="#"> Servicios </a>
+            <a href="convertidor.html">Ejemplos JS</a>
             <a href="Contactos.html"> Contacto </a>
         </nav>
     </header>
 <section>
     <div class="container-form">
         <div class="info-form">
-            <h2> Contactanos </h2>
+            <h2 class="Titulo"> Contactanos </h2>
             <p> 
                 Por este medio les dejaremos presente las maneras en las cuales podra comunicarse con nosotros.
             </p>
             <a href="#" clas><i class="Phone"></i> 2257 7777 </a>
             <a href="#" clas><i class="Gmail"></i> nuevo.ingreso@udb.edu.sv </a>
-            <a href="#" clas><i class="Maps-Market"> San Salvador, San Salvador, San Martin, El Salvador </i></a>
         </div>
         <form action="#" autocomplete="off">
             <input type="text" name="nombre" placeholder="Ingresa tu nombre"
