--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="Index.html">Inicio</a>
             <a href="Programadores.html">Acerca de</a>
-            <a href="#">Servicios</a>
+            <a href="convertidor.html">Ejemplos JS</a>
             <a href="Contactos.html">Contacto</a>
         </nav>
     </header>
@@ -28,14 +28,14 @@
                 <p>JavaScript se utiliza principalmente en el desarrollo web para hacer que las páginas sean interactivas y dinámicas. A través de la inclusión de scripts de JavaScript en documentos HTML,
                 se pueden crear funciones y efectos que mejoran la experiencia del usuario en sitios web. </p>
                 <div class="btn-home">
-                    <a href="#" class="btn">Saber más</a>
+                    <a href="Articulo1.html" class="btn">Saber más</a>
                 </div>
                 <br>
                 <h3><span>2</span>Manejo de variables en JavaScript</h3>
                 <p>El manejo de variables en JavaScript se refiere al proceso de declarar, asignar, y manipular variables en el lenguaje de programación JavaScript.
                 Las variables son contenedores que se utilizan para almacenar y gestionar datos en un programa.</p>
                 <div class="btn-home">
-                    <a href="#" class="btn">Saber más</a>
+                    <a href="Variables.html" class="btn">Saber más</a>
                 </div>
             </div>
         </div>
