--- a/convertidor.html
+++ b/convertidor.html
@@ -3,10 +3,21 @@
 
 <head>
     <title>Calculadora de IMC</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <a href="Index.html">Inicio</a>
+            <a href="Programadores.html">Acerca de</a>
+            <a href="convertidor.html">Ejemplos JS</a>
+            <a href="Contactos.html">Contacto</a>
+        </nav>
+    </header>
+
     <div class="container">
         <h1>Calculadora de IMC</h1>
         <form id="bmi-form">
@@ -34,6 +45,23 @@
         <p>Resultado de la Conversion a Kilogramos es:</p>
         <p id="resultadokilitogramos">0 kg</p>
     </div>
+
+    <footer>
+        <section class="buttons">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google-plus"></a>
+            <a href="#" class="fa fa-youtube"></a>
+        </section>
+        <hr>
+        <br>
+        <p>
+            <a href="#">Privacidad</a> | 
+            <a href="#">Términos del sitio</a> | 
+            <a href="#">Preferencias de cookies</a> | 
+            © 2023, UDB Web Services, Inc. o sus filiales. Todos los derechos reservados.
+        </p>
+    </footer>
 
     <script src="js/calculadora.js"></script>
     <script src="js/convertidor.js"></script>
