--- a/Articulo1.html
+++ b/Articulo1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cómo utilizar JavaScript</title>
+    <title>Manejo de variables js</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/article1.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -17,18 +17,27 @@
         </nav>
     </header>
 
-    <h2 class="Titulo">¿Cómo utilizar JavaScript?</h2>
+    <section class="Producto">
+        <h2 class="Titulo">¿Como utilizar JavaScript?</h2>
+        <p id="java-titulo">JavaScript es un lenguaje poderoso y versátil que se utiliza en una variedad de contextos, no solo en desarrollo web.</p>
+        <p  id="java-titulo"> Puedes crear aplicaciones de servidor con Node.js, juegos, aplicaciones móviles, entre otros. Es un lenguaje fundamental para cualquier desarrollador web o de software.</p>
+        <p  id="java-titulo"> Aqui algunas maneras de como incluir JavaScript en tu página web.</p>
+        <div class="Contenedor-Producto">
+            <img src="img/articulo1 js.jpg" alt="JavaScript" class="Imagen-Producto">
+            <div class="Contenedor-Texto">
+                <h3><span>1</span>Incrustado en el HTML</h3>
+                <p>Aqui un ejemplo</p>
+                <img class="chiquitito-img" src="img/muestra de en el html.png" alt="">
+                <h3><span>2</span>Enlazado a un archivo externo</h3>
+                <p>Aqui un ejemplo</p>
+                <img class="chiquitito-img" src="img/externo.png" alt="">
+                <h3><span>3</span>En línea en una URL</h3>
+                <p>Aqui un ejemplo</p>
+                <img class="chiquitito-img" src="img/URL.png" alt="">
 
-    <article>
-        <h3 id="color1">Un Poco Sobre JavaScript</h3>
-        <hr>
-        <p>JavaScript es un lenguaje de programación ampliamente utilizado en desarrollo web que permite a los desarrolladores crear contenido dinámico e interactivo en sitios web. Se ejecuta en el navegador del usuario y se utiliza para manipular el contenido de una página web, responder a eventos del usuario y comunicarse con servidores para cargar o enviar datos en segundo plano. </p>
-    </article>
-    <article>
-        <h3 id="color2">Cómo utilizar</h3>
-        <hr>
-        <p>Para utilizar JavaScript, se incluye el código JavaScript en el HTML de una página web, generalmente dentro de etiquetas "scripts". Puede ser utilizado tanto en el lado del cliente como en el servidor (Node.js). Los desarrolladores pueden escribir funciones y eventos para controlar el comportamiento de una página web, seleccionar elementos HTML, manipular el DOM (Document Object Model), gestionar peticiones HTTP y realizar muchas otras tareas. </p>
-    </article>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <section class="buttons">
@@ -37,6 +46,7 @@
             <a href="#" class="fa fa-google-plus"></a>
             <a href="#" class="fa fa-youtube"></a>
         </section>
+        <br>
         <hr>
         <br>
         <p>
