Agregando icon a las paginas

--- a/Articulo1.html
+++ b/Articulo1.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manejo de variables js</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/Icon.jpg" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,9 +22,11 @@
 
     <section class="Producto">
         <h2 class="Titulo">¿Como utilizar JavaScript?</h2>
-        <p id="java-titulo">JavaScript es un lenguaje poderoso y versátil que se utiliza en una variedad de contextos, no solo en desarrollo web.</p>
-        <p  id="java-titulo"> Puedes crear aplicaciones de servidor con Node.js, juegos, aplicaciones móviles, entre otros. Es un lenguaje fundamental para cualquier desarrollador web o de software.</p>
-        <p  id="java-titulo"> Aqui algunas maneras de como incluir JavaScript en tu página web.</p>
+        <p id="java-titulo">JavaScript es un lenguaje poderoso y versátil que se utiliza en una variedad de contextos,
+            no solo en desarrollo web.</p>
+        <p id="java-titulo"> Puedes crear aplicaciones de servidor con Node.js, juegos, aplicaciones móviles, entre
+            otros. Es un lenguaje fundamental para cualquier desarrollador web o de software.</p>
+        <p id="java-titulo"> Aqui algunas maneras de como incluir JavaScript en tu página web.</p>
         <div class="Contenedor-Producto">
             <img src="img/articulo1 js.jpg" alt="JavaScript" class="Imagen-Producto">
             <div class="Contenedor-Texto">
@@ -50,11 +55,12 @@
         <hr>
         <br>
         <p>
-            <a href="#">Privacidad</a> | 
-            <a href="#">Términos del sitio</a> | 
-            <a href="#">Preferencias de cookies</a> | 
+            <a href="#">Privacidad</a> |
+            <a href="#">Términos del sitio</a> |
+            <a href="#">Preferencias de cookies</a> |
             © 2023, UDB Web Services, Inc. o sus filiales. Todos los derechos reservados.
         </p>
     </footer>
 </body>
+
 </html>
