--- a/Contactos.html
+++ b/Contactos.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Formulario de contacto </title>
     <link rel="stylesheet" href="css/Style_contacto.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script > </script>
+    <link rel="shortcut icon" href="img/Icon.jpg" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <nav>
@@ -17,25 +19,24 @@
             <a href="Contactos.html"> Contacto </a>
         </nav>
     </header>
-<section>
-    <div class="container-form">
-        <div class="info-form">
-            <h2 class="Titulo"> Contactanos </h2>
-            <p> 
-                Por este medio les dejaremos presente las maneras en las cuales podra comunicarse con nosotros.
-            </p>
-            <a href="#" clas><i class="Phone"></i> 2257 7777 </a>
-            <a href="#" clas><i class="Gmail"></i> nuevo.ingreso@udb.edu.sv </a>
+    <section>
+        <div class="container-form">
+            <div class="info-form">
+                <h2 class="Titulo"> Contactanos </h2>
+                <p>
+                    Por este medio les dejaremos presente las maneras en las cuales podra comunicarse con nosotros.
+                </p>
+                <a href="#" clas><i class="Phone"></i> 2257 7777 </a>
+                <a href="#" clas><i class="Gmail"></i> nuevo.ingreso@udb.edu.sv </a>
+            </div>
+            <form action="#" autocomplete="off">
+                <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
+                <input type="text" name="email" placeholder="Ingresa tu correo" class="campo">
+                <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
+                <input type="submit" name="enviar" class="btn-enviar">
+            </form>
         </div>
-        <form action="#" autocomplete="off">
-            <input type="text" name="nombre" placeholder="Ingresa tu nombre"
-            class="campo">
-            <input type="text" name="email" placeholder="Ingresa tu correo" class="campo">
-            <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
-            <input type="submit" name="enviar" class="btn-enviar">
-        </form>
-    </div>
-</section>
+    </section>
     <footer>
         <section class="buttons">
             <a href="#" class="fa fa-facebook"></a>
@@ -47,11 +48,12 @@
         <hr>
         <br>
         <p>
-            <a href="#"> Privacidad </a> | 
-            <a href="#"> Términos del sitio </a> | 
-            <a href="#"> Preferencias de cookies </a> | 
+            <a href="#"> Privacidad </a> |
+            <a href="#"> Términos del sitio </a> |
+            <a href="#"> Preferencias de cookies </a> |
             © 2023, UDB Web Services, Inc. o sus filiales. Todos los derechos reservados.
         </p>
     </footer>
 </body>
+
 </html>
