--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Web</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/Icon.jpg" type="image/x-icon">
+
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,28 +23,32 @@
 
     <section class="Producto">
         <h2 class="Titulo">¿Qué es JavaScript?</h2>
-        <p id="java-titulo">Es un lenguaje de programación ampliamente utilizado en el desarrollo web. Es un componente fundamental de las páginas web modernas y se utiliza para mejorar la interactividad y la dinámica en los sitios web.</p>
+        <p id="java-titulo">Es un lenguaje de programación ampliamente utilizado en el desarrollo web. Es un componente
+            fundamental de las páginas web modernas y se utiliza para mejorar la interactividad y la dinámica en los
+            sitios web.</p>
         <br>
         <div class="Contenedor-Producto">
             <img src="img/ilustracion2.svg" alt="" class="Imagen-Producto">
             <div class="Contenedor-Texto">
                 <h3><span>1</span>Cómo utilizar JavaScript</h3>
-                <p>JavaScript se utiliza principalmente en el desarrollo web para hacer que las páginas sean interactivas y dinámicas. A través de la inclusión de scripts de JavaScript en documentos HTML,
-                se pueden crear funciones y efectos que mejoran la experiencia del usuario en sitios web. </p>
+                <p>JavaScript se utiliza principalmente en el desarrollo web para hacer que las páginas sean
+                    interactivas y dinámicas. A través de la inclusión de scripts de JavaScript en documentos HTML,
+                    se pueden crear funciones y efectos que mejoran la experiencia del usuario en sitios web. </p>
                 <div class="btn-home">
                     <a href="Articulo1.html" class="btn">Saber más</a>
                 </div>
                 <br>
                 <h3><span>2</span>Manejo de variables en JavaScript</h3>
-                <p>El manejo de variables en JavaScript se refiere al proceso de declarar, asignar, y manipular variables en el lenguaje de programación JavaScript.
-                Las variables son contenedores que se utilizan para almacenar y gestionar datos en un programa.</p>
+                <p>El manejo de variables en JavaScript se refiere al proceso de declarar, asignar, y manipular
+                    variables en el lenguaje de programación JavaScript.
+                    Las variables son contenedores que se utilizan para almacenar y gestionar datos en un programa.</p>
                 <div class="btn-home">
                     <a href="Variables.html" class="btn">Saber más</a>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <section>
         <div class="Clientes">
             <h2 class="Titulo">Ventajas y desventajas sobre JavaScript</h2>
@@ -88,11 +96,12 @@
         <hr>
         <br>
         <p>
-            <a href="#">Privacidad</a> | 
-            <a href="#">Términos del sitio</a> | 
-            <a href="#">Preferencias de cookies</a> | 
+            <a href="#">Privacidad</a> |
+            <a href="#">Términos del sitio</a> |
+            <a href="#">Preferencias de cookies</a> |
             © 2023, UDB Web Services, Inc. o sus filiales. Todos los derechos reservados.
         </p>
     </footer>
 </body>
+
 </html>
