--- a/convertidor.html
+++ b/convertidor.html
@@ -5,6 +5,8 @@
     <title>Calculadora de IMC</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="shortcut icon" href="img/Icon.jpg" type="image/x-icon">
+
 </head>
 
 <body>
@@ -23,25 +25,25 @@
         <form id="bmi-form">
             <label for="peso">Peso (kg):</label>
             <div class="left">
-            <input type="number" id="peso" required><br>
-        </div>
+                <input type="number" id="peso" required><br>
+            </div>
             <label for="altura">Altura (m):</label>
             <div class="right">
-            <input type="number" id="altura" required><br>
-        </div>
+                <input type="number" id="altura" required><br>
+            </div>
         </form>
         <p>Tu indice de masa corporal es: <span id="resultado"></span></p>
-        <button type="button" id="calcular">Calcular IMC</button> 
+        <button type="button" id="calcular">Calcular IMC</button>
     </div>
     <div class="img pesos">
-    <img src="img/indice de masa corporal.jpg" alt="">
+        <img src="img/indice de masa corporal.jpg" alt="">
     </div>
     <script src="js/calculadora.js"></script>
-    
+
     <div class="container2">
         <h1>Convertidor de Libras a Kilogramos</h1>
         <p>Introduce el valor en libras:</p>
-        <input type="number" id="librasInput" oninput="Librasakg()" >
+        <input type="number" id="librasInput" oninput="Librasakg()">
         <p>Resultado de la Conversion a Kilogramos es:</p>
         <p id="resultadokilitogramos">0 kg</p>
     </div>
@@ -56,9 +58,9 @@
         <hr>
         <br>
         <p>
-            <a href="#">Privacidad</a> | 
-            <a href="#">Términos del sitio</a> | 
-            <a href="#">Preferencias de cookies</a> | 
+            <a href="#">Privacidad</a> |
+            <a href="#">Términos del sitio</a> |
+            <a href="#">Preferencias de cookies</a> |
             © 2023, UDB Web Services, Inc. o sus filiales. Todos los derechos reservados.
         </p>
     </footer>
